--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/alexjoverm/v-runtime-template.git"
+    "url": "git+https://github.com/alexjoverm/v-runtime-template.git"
   },
   "keywords": [
     "vuejs",
