--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
   "homepage": "https://github.com/alexjoverm/v-runtime-template#readme",
   "module": "dist/v-runtime-template.es.js",
   "unpkg": "dist/v-runtime-template.umd.js",
-  "browser": "dist/v-runtime-template.es.js"
+  "browser": "dist/v-runtime-template.es.js",
+  "types": "v-runtime-template.d.ts"
 }
