--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "v-runtime-template",
-  "version": "1.10.0",
-  "description": "Create Vue components by compiling templates on the fly",
+  "name": "v-runtime-template-vue3",
+  "version": "1.0.3",
+  "description": "Create Vue 3 components by compiling templates on the fly",
   "main": "dist/v-runtime-template.umd.js",
   "scripts": {
     "prepublishOnly": "npm run build",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alexjoverm/v-runtime-template.git"
+    "url": "git+https://github.com/mattelen/v-runtime-template-vue3.git"
   },
   "keywords": [
     "vuejs",
@@ -24,14 +24,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "acorn": "^8.0.4",
     "microbundle": "^0.11.0"
   },
   "bugs": {
-    "url": "https://github.com/alexjoverm/v-runtime-template/issues"
+    "url": "https://github.com/mattelen/v-runtime-template-vue3/issues"
   },
-  "homepage": "https://github.com/alexjoverm/v-runtime-template#readme",
+  "homepage": "https://github.com/mattelen/v-runtime-template-vue3#readme",
   "module": "dist/v-runtime-template.es.js",
   "unpkg": "dist/v-runtime-template.umd.js",
   "browser": "dist/v-runtime-template.es.js",
-  "types": "v-runtime-template.d.ts"
+  "types": "v-runtime-template.d.ts",
+  "dependencies": {
+    "vue": "^3.0.5"
+  }
 }
